--- a/index.HTML
+++ b/index.HTML
@@ -5,35 +5,37 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Araxá - Moda Sustentável</title>
-    <link rel="shortcut icon" href="/img/Camada_3 (1).png" type="image/x-icon">
+    <link rel="shortcut icon" href="./img/Camada_3 (1).png" type="image/x-icon">
     <link rel="stylesheet" href="style.css" />
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+    <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous"> -->
 </head>
 
 <body>
     <div class="banner">
-        
+        <header class="container-grid">
 
-        <div class="container-grid">
-        <header class="espacamentoLateral">
-            <img src="./img/Camada_3 (1).png" alt="Logo Araxá" class="logo" />
-            <nav>
-                <a href="#">Sobre</a>
-                <a href="#">Ajuda</a>
-                <a href="#">Contate-nos</a>
-            </nav>
-            <input type="text" placeholder="Buscar..." class="search" />
+            <div class="part_inicio">
+
+                <img src="./img/Camada_3 (1).png" alt="Logo Araxá" class="logo" />
+
+                <div class="menu-buscar">
+                    <nav id="menu" class="menu">
+                        <a href="#">Sobre</a>
+                        <a href="#">Ajuda</a>
+                        <a href="#">Contate-nos</a>
+                    </nav>
+                    <input type="text" placeholder="Buscar..." class="search" />
+                </div>
+
+            </div>
         </header>
-        </div>
-
 
     </div>
 
-    <div class="conteudo*banner espacamentoLateral"></div>
 
-    <section class="sobre">
+    <section id="sobre" class="container-grid">
         <h2><span>Sobre</span> nós</h2>
         <div class="sobre-conteudo">
             <img src="img/Group 55.png" alt="Imagem indígena" />
@@ -42,49 +44,33 @@
         </div>
     </section>
 
+    <section id="parallax"></section>
+
     <section class="quem-somos">
         <h2><span>Quem</span> somos?</h2>
+
+
+
+
+
+
         <div class="icones">
-
-            <div class="icone"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path
-                        d="M9.302 1.256a1.5 1.5 0 0 0-2.604 0l-1.704 2.98a.5.5 0 0 0 .869.497l1.703-2.981a.5.5 0 0 1 .868 0l2.54 4.444-1.256-.337a.5.5 0 1 0-.26.966l2.415.647a.5.5 0 0 0 .613-.353l.647-2.415a.5.5 0 1 0-.966-.259l-.333 1.242zM2.973 7.773l-1.255.337a.5.5 0 1 1-.26-.966l2.416-.647a.5.5 0 0 1 .612.353l.647 2.415a.5.5 0 0 1-.966.259l-.333-1.242-2.545 4.454a.5.5 0 0 0 .434.748H5a.5.5 0 0 1 0 1H1.723A1.5 1.5 0 0 1 .421 12.24zm10.89 1.463a.5.5 0 1 0-.868.496l1.716 3.004a.5.5 0 0 1-.434.748h-5.57l.647-.646a.5.5 0 1 0-.708-.707l-1.5 1.5a.5.5 0 0 0 0 .707l1.5 1.5a.5.5 0 1 0 .708-.707l-.647-.647h5.57a1.5 1.5 0 0 0 1.302-2.244z" />
-                </svg>
-            </div>
-            <div class="icone"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path d="M11 15a4 4 0 1 0 0-8 4 4 0 0 0 0 8m5-4a5 5 0 1 1-10 0 5 5 0 0 1 10 0" />
-                    <path
-                        d="M9.438 11.944c.047.596.518 1.06 1.363 1.116v.44h.375v-.443c.875-.061 1.386-.529 1.386-1.207 0-.618-.39-.936-1.09-1.1l-.296-.07v-1.2c.376.043.614.248.671.532h.658c-.047-.575-.54-1.024-1.329-1.073V8.5h-.375v.45c-.747.073-1.255.522-1.255 1.158 0 .562.378.92 1.007 1.066l.248.061v1.272c-.384-.058-.639-.27-.696-.563h-.668zm1.36-1.354c-.369-.085-.569-.26-.569-.522 0-.294.216-.514.572-.578v1.1zm.432.746c.449.104.655.272.655.569 0 .339-.257.571-.709.614v-1.195z" />
-                    <path
-                        d="M1 0a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h4.083q.088-.517.258-1H3a2 2 0 0 0-2-2V3a2 2 0 0 0 2-2h10a2 2 0 0 0 2 2v3.528c.38.34.717.728 1 1.154V1a1 1 0 0 0-1-1z" />
-                    <path d="M9.998 5.083 10 5a2 2 0 1 0-3.132 1.65 6 6 0 0 1 3.13-1.567" />
-                </svg>
+            <div class="qs1">
+                <img src="./img/qsomos1.png" alt="">
             </div>
 
-            <div class="icone"><svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 16 16">
-                    <path
-                        d="M4 2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3 0a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zM4 5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM7.5 5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zM4.5 8a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5zm2.5.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5v1a.5.5 0 0 1-.5.5h-1a.5.5 0 0 1-.5-.5zm3.5-.5a.5.5 0 0 0-.5.5v1a.5.5 0 0 0 .5.5h1a.5.5 0 0 0 .5-.5v-1a.5.5 0 0 0-.5-.5z" />
-                    <path
-                        d="M2 1a1 1 0 0 1 1-1h10a1 1 0 0 1 1 1v14a1 1 0 0 1-1 1H3a1 1 0 0 1-1-1zm11 0H3v14h3v-2.5a.5.5 0 0 1 .5-.5h3a.5.5 0 0 1 .5.5V15h3z" />
-                </svg>
+            <div class="qs2">
+                <img src="./img/qsomos2.png" alt="">
             </div>
 
-
-
-            <div class="icone">
-                <svg width="100" height="100" viewBox="0 0 64 64" xmlns="http://www.w3.org/2000/svg">
-                    <!-- Corpo da camisa -->
-                    <path d="M16 4 L24 8 L40 8 L48 4 L60 20 L52 24 L52 60 H12 V24 L4 20 Z" fill="none" stroke="#000"
-                        stroke-width="2" />
-
-                    <!-- Gola -->
-                    <path d="M24 8 Q32 16 40 8" fill="none" stroke="#000" stroke-width="1" />
-
-                    <!-- Mangas -->
-                    <path d="M4 20 L12 24 V20 Z" fill="none" stroke="#000" stroke-width="2" />
-                    <path d="M60 20 L52 24 V20 Z" fill="none" stroke="#000" stroke-width="2" />
-                </svg>
+            <div class="qs3">
+                <img src="./img/qsomos3.png" alt="">
             </div>
+
+            <div class="qs4">
+                <img src="./img/qsomos4.png" alt="">
+            </div>
+
         </div>
     </section>
 
@@ -132,17 +118,6 @@
         <p><a href="#">Estou com problemas</a></p>
         <p>Venha ser você, venha ser Araxá!</p>
     </footer>
-
-    <script src="script.js"></script>
-
-
-
-
-
-
-
-
-   
 
 </body>
 
